Cherry-pick 198cfb4f193c. rdar://123424399

Assertion failure in ~CompletionHandler() via ImageBitmap::createCompletionHandler
    https://bugs.webkit.org/show_bug.cgi?id=270379

    Reviewed by Wenson Hsieh.

    Call the completion handler when exiting early in PendingImageBitmap::fetch.

    * LayoutTests/fast/images/create-image-bitmap-after-stopping-script-execution-context-expected.txt: Added.
    * LayoutTests/fast/images/create-image-bitmap-after-stopping-script-execution-context.html: Added.
    * Source/WebCore/html/ImageBitmap.cpp:

    Canonical link: https://commits.webkit.org/275581@main

Canonical link: https://commits.webkit.org/274941.69@safari-7619.1.5-branch